# battleship

./: .gitignore  CMakeLists.txt  README.md  ftxuisource.cpp
cmakegen/: version.hpp.in
include/ai/: ai.hpp  averageai.hpp  bestai.hpp  guessallai.hpp  smartai.hpp  stupidai.hpp
include/gameserver/: actionresponse.hpp  api.hpp  array2d.hpp  gamelayout.hpp  rowcol.hpp  server.hpp  ship.hpp
include/geom/: aabb.hpp  collisions.hpp  color.hpp  onedrange.hpp  rect.hpp  relative_dimension.hpp  rowcol.hpp  typed_position.hpp  typed_scalar.hpp  xy.hpp
include/terminal/: compositor.hpp  compositor_shared.hpp  control_codes.hpp  image.hpp  keyparser.hpp  pixel.hpp  render.hpp  scanline_rowiterator.hpp  scanline_stack_render.hpp  scanline_stack_row.hpp  scanlinerender.hpp  scanlinerender_painter.hpp  term_control.hpp
include/util/: aabb.hpp  baseconv.hpp  collisions.hpp  onedrange.hpp  randomutil.hpp  rect.hpp  soa.hpp  soamemorylayout.hpp  stackhelpers.hpp
source/: CMakeLists.txt  fireapp.cpp  main.cpp  simpleui.cpp
source/ai/: averageai.cpp  bestai.cpp  guessallai.cpp  stupidai.cpp
source/gameserver/: rowcol.cpp  ship.cpp
source/terminal/: control_codes.cpp  keyparser.cpp  term_control.cpp
source/util/: rowcol.cpp
tests/: CMakeLists.txt  test_scanlinerender.cpp
